--- a/grails/6/Dockerfile
+++ b/grails/6/Dockerfile
@@ -1,8 +1,19 @@
-# 设置基础镜像为OpenJDK 11
-FROM eclipse-temurin:11-jdk-alpine
+# 设置基础镜像为特定版本的 eclipse-temurin:11-jdk-alpine
+FROM eclipse-temurin:11.0.20.1_1-jdk-alpine
 
-# 设置作者标签
-LABEL com.micrograils.docker.authors="aaron@micrograils.com"
+# 安装OpenSSH服务器
+RUN apk update && \
+    apk add openssh && \
+    rm -rf /var/cache/apk/*
+
+# 允许root用户登录
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+
+# 切换工作目录到/opt
+WORKDIR /opt
+
+# 下载Gradle 7.2（仅下载，不解压）
+RUN wget https://services.gradle.org/distributions/gradle-7.2-bin.zip
 
 # 定义Grails版本
 ARG GRAILS_VERSION=6.0.0
@@ -12,10 +23,7 @@ ENV GRAILS_VERSION=${GRAILS_VERSION} \
     GRAILS_HOME=/opt/grails \
     PATH=/opt/grails/bin:$PATH
 
-# 切换工作目录到/opt
-WORKDIR /opt
-
-# 下载并安装Grails 6
+# 下载并安装Grails 6（这部分可以在未来更新Grails版本时重新运行）
 RUN wget https://github.com/grails/grails-core/releases/download/v${GRAILS_VERSION}/grails-${GRAILS_VERSION}.zip && \
     unzip grails-$GRAILS_VERSION.zip && \
     rm -rf grails-$GRAILS_VERSION.zip && \
@@ -26,10 +34,11 @@ RUN wget https://github.com/grails/grails-core/releases/download/v${GRAILS_VERSI
 WORKDIR /app
 
 # 声明需要挂载的卷
-VOLUME ["/root/.gradle", "/root/.m2", "/app"]
+VOLUME ["/root/.gradle", "/root/.m2", "/app", "/root/.ssh"]
 
-# 暴露端口（如果需要的话）
+# 暴露端口（8080和22）
 EXPOSE 8080
+EXPOSE 22
 
 # 设置启动命令
-CMD ["/bin/sh"]
+CMD ["/usr/sbin/sshd", "-D"]
