--- a/grails/6/Dockerfile
+++ b/grails/6/Dockerfile
@@ -10,6 +10,9 @@ RUN apk update && \
     apk add openssh && \
     rm -rf /var/cache/apk/*
 
+# 生成SSH主机密钥文件
+RUN ssh-keygen -A
+
 # 设置SSH root密码（这是一个示例，请更改为您自己的密码）
 RUN echo 'root:password' | chpasswd
 
