生成SSH主机密钥文件

--- a/grails/6/Dockerfile
+++ b/grails/6/Dockerfile
@@ -14,7 +14,7 @@ RUN apk update && \
 RUN ssh-keygen -A
 
 # 允许root用户登录
-RUN sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
 # 设置SSH root密码（这是一个示例，请更改为您自己的密码）
 RUN echo 'root:password' | chpasswd
